force-app/main/default/objects/Insurance_Claim__dlm/fields/AccidentArea__c.field-meta.xml
<CustomField>
    <fullName>AccidentArea__c</fullName>
    <label>AccidentArea</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AccidentArea</labelOverride>
        <masterLabel>AccidentArea</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>