force-app/main/default/objects/Insurance_Claim__dlm/fields/AddressChange_Claim__c.field-meta.xml
<CustomField>
    <fullName>AddressChange_Claim__c</fullName>
    <label>AddressChange_Claim</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AddressChange_Claim</labelOverride>
        <masterLabel>AddressChange_Claim</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>