force-app/main/default/objects/Insurance_Claim__dlm/fields/AgentType__c.field-meta.xml
<CustomField>
    <fullName>AgentType__c</fullName>
    <label>AgentType</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AgentType</labelOverride>
        <masterLabel>AgentType</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>