force-app/main/default/objects/Insurance_Claim__dlm/fields/AgeOfPolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>AgeOfPolicyHolder__c</fullName>
    <label>AgeOfPolicyHolder</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AgeOfPolicyHolder</labelOverride>
        <masterLabel>AgeOfPolicyHolder</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>