force-app/main/default/objects/Insurance_Claim__dlm/fields/AgeOfVehicle__c.field-meta.xml
<CustomField>
    <fullName>AgeOfVehicle__c</fullName>
    <label>AgeOfVehicle</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>AgeOfVehicle</labelOverride>
        <masterLabel>AgeOfVehicle</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>