force-app/main/default/objects/Insurance_Claim__dlm/fields/BasePolicy__c.field-meta.xml
<CustomField>
    <fullName>BasePolicy__c</fullName>
    <label>BasePolicy</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>BasePolicy</labelOverride>
        <masterLabel>BasePolicy</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>