force-app/main/default/objects/Insurance_Claim__dlm/fields/Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key__c</fullName>
    <label>Customer_Key</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Customer_Key</labelOverride>
        <masterLabel>Customer_Key</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>