force-app/main/default/objects/Insurance_Claim__dlm/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <label>DayOfWeek</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>DayOfWeek</labelOverride>
        <masterLabel>DayOfWeek</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>