force-app/main/default/objects/Insurance_Claim__dlm/fields/DayOfWeekClaimed__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeekClaimed__c</fullName>
    <label>DayOfWeekClaimed</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>DayOfWeekClaimed</labelOverride>
        <masterLabel>DayOfWeekClaimed</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>