force-app/main/default/objects/Insurance_Claim__dlm/fields/Days_Policy_Accident__c.field-meta.xml
<CustomField>
    <fullName>Days_Policy_Accident__c</fullName>
    <label>Days_Policy_Accident</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Days_Policy_Accident</labelOverride>
        <masterLabel>Days_Policy_Accident</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>