force-app/main/default/objects/Insurance_Claim__dlm/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <label>Deductible</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Deductible</labelOverride>
        <masterLabel>Deductible</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>