force-app/main/default/objects/Insurance_Claim__dlm/fields/DriverRating__c.field-meta.xml
<CustomField>
    <fullName>DriverRating__c</fullName>
    <label>DriverRating</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>DriverRating</labelOverride>
        <masterLabel>DriverRating</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>