force-app/main/default/objects/Insurance_Claim__dlm/fields/Fault__c.field-meta.xml
<CustomField>
    <fullName>Fault__c</fullName>
    <label>Fault</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Fault</labelOverride>
        <masterLabel>Fault</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>