force-app/main/default/objects/Insurance_Claim__dlm/fields/FraudFound_P__c.field-meta.xml
<CustomField>
    <fullName>FraudFound_P__c</fullName>
    <label>FraudFound_P</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>FraudFound_P</labelOverride>
        <masterLabel>FraudFound_P</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>