force-app/main/default/objects/Insurance_Claim__dlm/fields/KQ_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>KQ_Policy_Number__c</fullName>
    <label>Key Qualifier Policy Number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Policy Number</labelOverride>
        <masterLabel>Key Qualifier Policy Number</masterLabel>
        <refAttrDeveloperName>KQ_Policy_Number</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>