force-app/main/default/objects/Insurance_Claim__dlm/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>MaritalStatus</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>MaritalStatus</labelOverride>
        <masterLabel>MaritalStatus</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>