force-app/main/default/objects/Insurance_Claim__dlm/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Month</labelOverride>
        <masterLabel>Month</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>