force-app/main/default/objects/Insurance_Claim__dlm/fields/MonthClaimed__c.field-meta.xml
<CustomField>
    <fullName>MonthClaimed__c</fullName>
    <label>MonthClaimed</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>MonthClaimed</labelOverride>
        <masterLabel>MonthClaimed</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>