force-app/main/default/objects/Insurance_Claim__dlm/fields/NumberOfCars__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCars__c</fullName>
    <label>NumberOfCars</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>NumberOfCars</labelOverride>
        <masterLabel>NumberOfCars</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>