force-app/main/default/objects/Insurance_Claim__dlm/fields/NumberOfSuppliments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSuppliments__c</fullName>
    <label>NumberOfSuppliments</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>NumberOfSuppliments</labelOverride>
        <masterLabel>NumberOfSuppliments</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>