force-app/main/default/objects/Insurance_Claim__dlm/fields/PastNumberOfClaims__c.field-meta.xml
<CustomField>
    <fullName>PastNumberOfClaims__c</fullName>
    <label>PastNumberOfClaims</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PastNumberOfClaims</labelOverride>
        <masterLabel>PastNumberOfClaims</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>