force-app/main/default/objects/Insurance_Claim__dlm/fields/PoliceReportFiled__c.field-meta.xml
<CustomField>
    <fullName>PoliceReportFiled__c</fullName>
    <label>PoliceReportFiled</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PoliceReportFiled</labelOverride>
        <masterLabel>PoliceReportFiled</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>