force-app/main/default/objects/Insurance_Claim__dlm/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Policy Number</labelOverride>
        <masterLabel>Policy Number</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>