force-app/main/default/objects/Insurance_Claim__dlm/fields/PolicyType__c.field-meta.xml
<CustomField>
    <fullName>PolicyType__c</fullName>
    <label>PolicyType</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>PolicyType</labelOverride>
        <masterLabel>PolicyType</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>