force-app/main/default/objects/Insurance_Claim__dlm/fields/RepNumber__c.field-meta.xml
<CustomField>
    <fullName>RepNumber__c</fullName>
    <label>RepNumber</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>RepNumber</labelOverride>
        <masterLabel>RepNumber</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>