force-app/main/default/objects/Insurance_Claim__dlm/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Sex</labelOverride>
        <masterLabel>Sex</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>