force-app/main/default/objects/Insurance_Claim__dlm/fields/VehicleCategory__c.field-meta.xml
<CustomField>
    <fullName>VehicleCategory__c</fullName>
    <label>VehicleCategory</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>VehicleCategory</labelOverride>
        <masterLabel>VehicleCategory</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>