force-app/main/default/objects/Insurance_Claim__dlm/fields/VehiclePrice__c.field-meta.xml
<CustomField>
    <fullName>VehiclePrice__c</fullName>
    <label>VehiclePrice</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>VehiclePrice</labelOverride>
        <masterLabel>VehiclePrice</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>