force-app/main/default/objects/Insurance_Claim__dlm/fields/WeekOfMonth__c.field-meta.xml
<CustomField>
    <fullName>WeekOfMonth__c</fullName>
    <label>WeekOfMonth</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>WeekOfMonth</labelOverride>
        <masterLabel>WeekOfMonth</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>