force-app/main/default/objects/Insurance_Claim__dlm/fields/WeekOfMonthClaimed__c.field-meta.xml
<CustomField>
    <fullName>WeekOfMonthClaimed__c</fullName>
    <label>WeekOfMonthClaimed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>WeekOfMonthClaimed</labelOverride>
        <masterLabel>WeekOfMonthClaimed</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>