force-app/main/default/objects/Insurance_Claim__dlm/fields/WitnessPresent__c.field-meta.xml
<CustomField>
    <fullName>WitnessPresent__c</fullName>
    <label>WitnessPresent</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>WitnessPresent</labelOverride>
        <masterLabel>WitnessPresent</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>